<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/enterView"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        android:paddingTop="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="40sp"
        android:layout_marginStart="20dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autoSizeTextType="uniform"
        tools:text="@string/EnterCalculation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_calc"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/calcView"
        android:textSize="25sp"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@+id/enterView"
        tools:layout_editor_absoluteX="0dp"
        tools:text="@string/viewCalculation"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_calc">

        <Button
            style="@style/numbers_buttons"
            app:backgroundTint="@color/button"
            android:layout_width="match_parent"
            android:id="@+id/button_rigthParentheses"
            android:textColor="@color/operators"
            android:layout_above="@id/button_7"
            android:textAlignment="center"
            android:layout_toStartOf="@id/button_leftParentheses"
            android:text="@string/right_parentheses"/>
        <Button
            style="@style/numbers_buttons"
            android:id="@+id/button_leftParentheses"
            android:layout_width="match_parent"
            app:backgroundTint="@color/button"
            android:layout_above="@id/button_8"
            android:textColor="@color/operators"
            android:layout_alignEnd="@id/button_8"
            android:textAlignment="center"
            android:text="@string/left_parentheses"
            android:layout_toEndOf="@id/button_7"/>

        <Button
            android:id="@+id/button_clearAll"
            style="@style/numbers_buttons"
            android:layout_width="match_parent"
            android:layout_above="@id/button_rigthParentheses"
            android:layout_alignEnd="@id/button_divide"
            android:text="@string/clearAll"
            android:textColor="@color/operators"
            app:backgroundTint="@color/gray" />

        <ImageButton
            android:id="@+id/button_clear"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_9"
            android:layout_toStartOf="@id/button_divide"
            android:src="@drawable/ic_backspace"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_1"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_0"
            android:text="@string/one"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_2"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_0"
            android:layout_toEndOf="@id/button_1"
            android:backgroundTint="@color/button"
            android:text="@string/two"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_3"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_colt"
            android:layout_toEndOf="@id/button_8"
            android:text="@string/three"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_4"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_1"
            android:text="@string/four"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_5"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_2"
            android:layout_toEndOf="@id/button_4"
            android:text="@string/five"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_6"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_3"
            android:layout_toEndOf="@id/button_5"
            android:text="@string/six"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_7"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_4"
            android:text="@string/seven"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_8"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_5"
            android:layout_toEndOf="@id/button_4"
            android:text="@string/eight"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_9"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_6"
            android:layout_toEndOf="@id/button_8"
            android:text="@string/nine"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_0"
            style="@style/numbers_buttons"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/button_9"
            android:text="@string/zero"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_colt"
            style="@style/numbers_buttons"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/button_0"
            android:text="@string/colt"
            app:backgroundTint="@color/button" />

        <Button
            android:id="@+id/button_divide"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_multiply"
            android:layout_toEndOf="@id/button_3"
            android:text="@string/divide"
            android:textColor="@color/operators"
            app:backgroundTint="@color/gray" />

        <Button
            android:id="@+id/button_multiply"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_plus"
            android:layout_toEndOf="@id/button_9"
            android:text="@string/multiply"
            android:textColor="@color/operators"
            app:backgroundTint="@color/gray" />

        <Button
            android:id="@+id/button_plus"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_minus"
            android:layout_toEndOf="@id/button_6"
            android:text="@string/plus"
            android:textColor="@color/operators"
            app:backgroundTint="@color/gray" />

        <Button
            android:id="@+id/button_minus"
            style="@style/numbers_buttons"
            android:layout_above="@id/button_igual"
            android:layout_toEndOf="@id/button_9"
            android:text="@string/minus"
            android:textColor="@color/operators"
            app:backgroundTint="@color/gray" />

        <Button
            android:id="@+id/button_igual"
            style="@style/numbers_buttons"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/button_colt"
            android:text="@string/equal"
            android:textColor="@color/white"
            app:backgroundTint="@color/operators" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>